# matrix_multiplication

./: Cargo.toml
matrix/: Cargo.toml
matrix/benches/: matrix_multiplication.rs
matrix/src/: lib.rs  tests.rs
matrix/tests/: main.rs  matrix.rs
matrix_macros/: Cargo.toml
matrix_macros/src/: lib.rs
matrix_macros/tests/: trybuild_tests.rs
matrix_macros/tests/trybuild/: compile_fail.rs  compile_fail.stderr  compile_pass.rs
parallel/: Cargo.toml
parallel/src/: lib.rs
parallel/tests/: parallel.rs
sequential/: Cargo.toml
sequential/src/: lib.rs
sequential/tests/: sequential.rs
